Added trigger logging